# trello-tasks

./: .gitignore  README.md  config.example.yml  pyproject.toml
tests/: test_manager.py
trellotasks/: __init__.py  __main__.py
